package com.mikaservices.platform.common.enums

enum class NiveauRisque {
    FAIBLE,
    MOYEN,
    ELEVE,
    CRITIQUE
}
