package com.mikaservices.platform.common.enums

enum class StatutActionPrevention {
    PLANIFIEE,
    EN_COURS,
    REALISEE,
    VERIFIEE,
    ANNULEE
}
