package com.mikaservices.platform.common.enums

enum class StatutIncident {
    DECLARE,
    EN_INVESTIGATION,
    ANALYSE,
    ACTIONS_EN_COURS,
    CLOTURE
}
