package com.mikaservices.platform.common.enums

enum class TypeIncident {
    ACCIDENT_TRAVAIL,
    PRESQU_ACCIDENT,
    INCIDENT_MATERIEL,
    INCIDENT_ENVIRONNEMENTAL,
    CHUTE,
    ELECTROCUTION,
    EFFONDREMENT,
    INCENDIE,
    AUTRE
}
