package com.mikaservices.platform.modules.qshe.enums

enum class GraviteIncident {
    MINEURE,
    LEGERE,
    GRAVE,
    MORTELLE
}
